--- a/configs/G10.62-0.38.cfg
+++ b/configs/G10.62-0.38.cfg
@@ -3,9 +3,8 @@ name = G10.62-0.38
 ra = 18h10m28.6071s
 dec = -19d55m49.4602s
 frame = icrs
-basedir = /home/myso/share/binary_project/IRAS_18089/G10.62-0.38
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
 #distance = 3.5 kpc
 #vlsr = -2.0 km/s
 # Parallax 2014ApJ...781..108S
@@ -263,3 +262,8 @@ file = ${cubesdir}/c5c8_CH3OH/G10.62-0.38_spw0_0-1000.image.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G10.62-0.38_spw3.image.fits
+#rms = 1.2 mJy/beam
+molecules = CH3CN
