--- a/configs/extracted/G10.62-0.38_hmc1.cfg
+++ b/configs/extracted/G10.62-0.38_hmc1.cfg
@@ -3,9 +3,7 @@ name = G10.62-0.38
 ra = 18h10m28.60755s
 dec = -19d55m49.4614s
 frame = icrs
-# Parallax 2014ApJ...781..108S
 distance = 4.95 kpc
-# Paper III
 vlsr = 0.851 km/s
 radius = 0.0458 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
@@ -22,10 +20,45 @@ rms = 1.2 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure61.subcube.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_8_-11_8__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
 
