--- a/configs/extracted/pvmaps/G35.13-0.74_alma6_rotation.cfg
+++ b/configs/extracted/pvmaps/G35.13-0.74_alma6_rotation.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
+moldir = ./molecules
 pas = 5 35 65 95 125 155 deg
 
 [CH3OH_spw0]
