--- a/configs/extracted/NGC_6334_I_N_alma1.cfg
+++ b/configs/extracted/NGC_6334_I_N_alma1.cfg
@@ -1,14 +1,14 @@
 [INFO]
 name = NGC_6334_I_N
-alma = 6
-#ra = 17h20m54.61936s
-#dec = -35d45m08.6730547234s
-ra = 17h20m54.61962s
-dec = -35d45m08.6715s
+alma = 1
+#ra = 17h20m55.19122s
+#dec = -35d45m03.9506457765s
+ra = 17h20m55.19138s
+dec = -35d45m03.9525s
 frame = icrs
 distance = 1.35 kpc
-vlsr = -7.2 km/s
-radius = 0.032 arcsec
+vlsr = -1.77 km/s
+radius = 0.049 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
 
@@ -18,14 +18,21 @@ file = ${sourcedata}/continuum/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
-file = ${subcubes}/spw0_from_CH3OH.structure6.subcube.fits
+file = ${subcubes}/spw0_from_CH3OH.structure10.subcube.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure286.subcube.contsub.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
