--- a/configs/extracted/NGC_6334_I_N_alma11.cfg
+++ b/configs/extracted/NGC_6334_I_N_alma11.cfg
@@ -1,14 +1,15 @@
 [INFO]
 name = NGC_6334_I_N
-alma = 4
-#ra = 17h20m54.87219s
-#dec = -35d45m06.4298713643s
-ra = 17h20m54.87122s
-dec = -35d45m06.4309s
+alma = 11
+#ra = 17h20m54.83885s
+#dec = -35d45m06.0538803313s
+ra = 17h20m54.83871s
+dec = -35d45m06.0527s
+#PA = 10
 frame = icrs
 distance = 1.35 kpc
-vlsr = -6.7 km/s
-radius = 0.040 arcsec
+vlsr = -5.0 km/s
+radius = 0.030 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
 
@@ -18,14 +19,21 @@ file = ${sourcedata}/continuum/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
-file = ${subcubes}/spw0_from_CH3OH.structure7.subcube.fits
+file = ${subcubes}/spw0_from_CH3OH.structure8.subcube.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure249.subcube.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc4_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc5_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
